--- a/index.html
+++ b/index.html
@@ -16,6 +16,18 @@
   <div class="container">
     <iframe src="./circles/" height="250" width="250" title="Circles"></iframe>
   </div>
+  <div class="container">
+    <iframe src="./circles-with-interaction/" height="250" width="250" title="Gravity"></iframe>
+  </div>
+  <div class="container">
+    <iframe src="./gravity/" height="250" width="250" title="Gravity"></iframe>
+  </div>
+  <div class="container">
+    <iframe src="./circles-mouse-dragging/" height="250" width="250" title="Gravity"></iframe>
+  </div>
+  <div class="container">
+    <iframe src="./collision-detection/" height="250" width="250" title="Gravity"></iframe>
+  </div>
 </body>
 
 </html>
