--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+  <div class="overlay"></div>
   <h1>fun with canvas</h1>
   <div class="container">
     <iframe src="./circles/" height="250" width="250" title="Circles"></iframe>
