--- a/index.html
+++ b/index.html
@@ -5,29 +5,39 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Fun with canvas</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/chevron.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <div class="overlay"></div>
+  <div class="overlay">
+    <div class="center-con">
+      <div class="round">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+    </div>
+  </div>
   <h1>fun with canvas</h1>
   <div class="container">
-    <iframe src="./circles/" height="250" width="250" title="Circles"></iframe>
+    <iframe src="./examples/circles/" height="250" width="250" title="Circles"></iframe>
   </div>
   <div class="container">
-    <iframe src="./circles-with-interaction/" height="250" width="250" title="Gravity"></iframe>
+    <iframe src="./examples/circles-with-interaction/" height="250" width="250" title="Gravity"></iframe>
   </div>
   <div class="container">
-    <iframe src="./gravity/" height="250" width="250" title="Gravity"></iframe>
+    <iframe src="./examples/gravity/" height="250" width="250" title="Gravity"></iframe>
   </div>
   <div class="container">
-    <iframe src="./circles-mouse-dragging/" height="250" width="250" title="Gravity"></iframe>
+    <iframe src="./examples/circles-mouse-dragging/" height="250" width="250" title="Gravity"></iframe>
   </div>
   <div class="container">
-    <iframe src="./collision-detection/" height="250" width="250" title="Gravity"></iframe>
+    <iframe src="./examples/collision-detection/" height="250" width="250" title="Gravity"></iframe>
   </div>
 </body>
 
