overlay and trasitions

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
   <div class="container">
     <iframe src="./examples/collision-detection/" height="250" width="250" title="Gravity"></iframe>
   </div>
+  <script src="./js/main.js"></script>
 </body>
 
 </html>
