--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
   </div>
   <h1>fun with canvas</h1>
   <div class="container">
-    <iframe src="./examples/circles/" height="250" width="250" title="Circles"></iframe>
+    <iframe src="./examples/circles/" height="250" width="250" title="Circles" scrolling="no"></iframe>
   </div>
   <div class="container">
-    <iframe src="./examples/circles-with-interaction/" height="250" width="250" title="Gravity"></iframe>
+    <iframe src="./examples/circles-with-interaction/" height="250" width="250" title="Gravity" scrolling="no"></iframe>
   </div>
   <div class="container">
-    <iframe src="./examples/gravity/" height="250" width="250" title="Gravity"></iframe>
+    <iframe src="./examples/gravity/" height="250" width="250" title="Gravity" scrolling="no"></iframe>
   </div>
   <div class="container">
-    <iframe src="./examples/circles-mouse-dragging/" height="250" width="250" title="Gravity"></iframe>
+    <iframe src="./examples/circles-mouse-dragging/" height="250" width="250" title="Gravity" scrolling="no"></iframe>
   </div>
   <div class="container">
-    <iframe src="./examples/collision-detection/" height="250" width="250" title="Gravity"></iframe>
+    <iframe src="./examples/collision-detection/" height="250" width="250" title="Gravity" scrolling="no"></iframe>
   </div>
   <script src="./js/main.js"></script>
 </body>
